--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -1,5 +1,5 @@
 @import 'antd/dist/antd.less';
 
-@primary-color: #aaaaaa;
+@primary-color: #aacbad;
 @link-color: #ddd;
 @painter-background-color: #759247;
